Loo nupud ka rööpküliku ja ringi jaoks.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <button>
   Kolmnurk
 </button>
+<button>
+  Rööpkülik
+</button>
+<button>
+  Ring
+</button>
 <link href="style.css" rel="stylesheet">
 <script src="script.js">
 </script>
