Loo div (lehekülje osa), kuhu kasutaja saab hiljem kolmnurga mõõtmed sisestada.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <button>
   Ring
 </button>
+<div>
+  Siia tuleb kolmnurga ümbermõõdu ja pindala arvutus.
+</div>
 <link href="style.css" rel="stylesheet">
 <script src="script.js">
 </script>
