Loo div-id ka teiste kujundite jaoks.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <div>
   Siia tuleb kolmnurga ümbermõõdu ja pindala arvutus.
 </div>
+<div>
+  Siia tuleb rööpküliku ümbermõõdu ja pindala arvutus.
+</div>
+<div>
+  Siia tuleb ringi ümbermõõdu ja pindala arvutus.
+</div>
 <link href="style.css" rel="stylesheet">
 <script src="script.js">
 </script>
