Pane lehekülg ka teiste nuppude vajutusele reageerima.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <button onclick="changeTab();">
   Kolmnurk
 </button>
-<button>
+<button onclick="changeTab()";>
   Rööpkülik
 </button>
-<button>
+<button onclick="changeTab()";>
   Ring
 </button>
 <div>
