Edasta funktsioonile argument, mis ütleb, mis kujund valiti.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<button onclick="changeTab();">
+<button onclick="changeTab('Triangle');">
   Kolmnurk
 </button>
-<button onclick="changeTab()";>
+<button onclick="changeTab('Parallelogram');">
   Rööpkülik
 </button>
-<button onclick="changeTab()";>
+<button onclick="changeTab('Circle');">
   Ring
 </button>
 <div>
