Div-id saavad endale id-d, et funktsioon pääseks neile ligi.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <button onclick="changeTab('Circle');">
   Ring
 </button>
-<div>
+<div id="Triangle">
   Siia tuleb kolmnurga ümbermõõdu ja pindala arvutus.
 </div>
-<div>
+<div id="Parallelogram">
   Siia tuleb rööpküliku ümbermõõdu ja pindala arvutus.
 </div>
-<div>
+<div id="Circle">
   Siia tuleb ringi ümbermõõdu ja pindala arvutus.
 </div>
 <link href="style.css" rel="stylesheet">
