Ükskõik millise nupu vajutus peidab kõik div-id.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <button onclick="changeTab('Circle');">
   Ring
 </button>
-<div id="Triangle">
+<div class="tabcontent" id="Triangle">
   Siia tuleb kolmnurga ümbermõõdu ja pindala arvutus.
 </div>
-<div id="Parallelogram">
+<div class="tabcontent" id="Parallelogram">
   Siia tuleb rööpküliku ümbermõõdu ja pindala arvutus.
 </div>
-<div id="Circle">
+<div class="tabcontent" id="Circle">
   Siia tuleb ringi ümbermõõdu ja pindala arvutus.
 </div>
 <link href="style.css" rel="stylesheet">
