Peida alguses kõik div-id peale esimese.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <div class="tabcontent" id="Triangle">
   Siia tuleb kolmnurga ümbermõõdu ja pindala arvutus.
 </div>
-<div class="tabcontent" id="Parallelogram">
+<div class="tabcontent" hidden id="Parallelogram">
   Siia tuleb rööpküliku ümbermõõdu ja pindala arvutus.
 </div>
-<div class="tabcontent" id="Circle">
+<div class="tabcontent" hidden id="Circle">
   Siia tuleb ringi ümbermõõdu ja pindala arvutus.
 </div>
 <link href="style.css" rel="stylesheet">
