--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<button onclick="changeTab('Triangle');">
+<button onclick="changeTab(this, 'Triangle');">
   Kolmnurk
 </button>
-<button onclick="changeTab('Parallelogram');">
+<button onclick="changeTab(this, 'Parallelogram');">
   Rööpkülik
 </button>
-<button onclick="changeTab('Circle');">
+<button onclick="changeTab(this, 'Circle');">
   Ring
 </button>
 <div class="tabcontent" id="Triangle">
