Tee mittevalitud kujundite nupud klikitavaks.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<button onclick="changeTab(this, 'Triangle');">
+<button class="tabbutton" onclick="changeTab(this, 'Triangle');">
   Kolmnurk
 </button>
-<button onclick="changeTab(this, 'Parallelogram');">
+<button class="tabbutton" onclick="changeTab(this, 'Parallelogram');">
   Rööpkülik
 </button>
-<button onclick="changeTab(this, 'Circle');">
+<button class="tabbutton" onclick="changeTab(this, 'Circle');">
   Ring
 </button>
 <div class="tabcontent" id="Triangle">
