Loo võimalus sisestada kolmnurga külje pikkus.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   Ring
 </button>
 <div class="tabcontent" id="Triangle">
-  Siia tuleb kolmnurga ümbermõõdu ja pindala arvutus.
+  <input>
 </div>
 <div class="tabcontent" hidden id="Parallelogram">
   Siia tuleb rööpküliku ümbermõõdu ja pindala arvutus.
