Lisa andmesisestusväljale selgitav tekst.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   Ring
 </button>
 <div class="tabcontent" id="Triangle">
-  <input>
+  <label for="TriangleSide1">
+    Külg 1
+  </label>
+  <input id="TriangleSide1">
 </div>
 <div class="tabcontent" hidden id="Parallelogram">
   Siia tuleb rööpküliku ümbermõõdu ja pindala arvutus.
