Loo võimalus sisestada ka ülejäänud külgede pikkused.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     Külg 1
   </label>
   <input id="TriangleSide1">
+  <label for="TriangleSide2">
+    Külg 2
+  </label>
+  <input id="TriangleSide2">
+  <label for="TriangleSide3">
+    Külg 3
+  </label>
+  <input id="TriangleSide3">
 </div>
 <div class="tabcontent" hidden id="Parallelogram">
   Siia tuleb rööpküliku ümbermõõdu ja pindala arvutus.
