Loo nupp, mis käivitab arvutuse.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     Külg 3
   </label>
   <input id="TriangleSide3">
+  </br>
+  <button>
+    Arvuta
+  </button>
 </div>
 <div class="tabcontent" hidden id="Parallelogram">
   Siia tuleb rööpküliku ümbermõõdu ja pindala arvutus.
