Lisa tekst, mis näitab, kuhu tekib kujundi ümbermõõt.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <div class="tabcontent" hidden id="Circle">
   Siia tuleb ringi ümbermõõdu ja pindala arvutus.
 </div>
+Ümbermõõt:
 <link href="style.css" rel="stylesheet">
 <script src="script.js">
 </script>
