Lisa div, kuhu tekib kujundi ümbermõõt.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
   Siia tuleb ringi ümbermõõdu ja pindala arvutus.
 </div>
 Ümbermõõt:
+<div>
+  ?
+</div>
 <link href="style.css" rel="stylesheet">
 <script src="script.js">
 </script>
