Pane lehekülg arvutuse nupu vajutusele reageerima.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </label>
   <input id="TriangleSide3">
   </br>
-  <button>
+  <button onclick="triangle();">
     Arvuta
   </button>
 </div>
@@ -34,8 +34,7 @@
   Siia tuleb ringi ümbermõõdu ja pindala arvutus.
 </div>
 Ümbermõõt:
-<div>
-  ?
+<div id="Perimeter">
 </div>
 <link href="style.css" rel="stylesheet">
 <script src="script.js">
