Arvuta ka kolmnurga pindala.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 Ümbermõõt:
 <div id="Perimeter">
 </div>
+Pindala:
+<div id="Area">
+</div>
 <link href="style.css" rel="stylesheet">
 <script src="script.js">
 </script>
