--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<button class="tabbutton" disabled onclick="changeTab(this, 'Triangle');">
+<button class="tabbutton" disabled id="TriangleButton" onclick="changeTab(this, 'Triangle');">
   Kolmnurk
 </button>
 <button class="tabbutton" onclick="changeTab(this, 'Parallelogram');">
