--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <button class="tabbutton" disabled id="TriangleButton" onclick="changeTab(this, 'Triangle');">
   Kolmnurk
 </button>
-<button class="tabbutton" onclick="changeTab(this, 'Parallelogram');">
+<button class="tabbutton" id="ParallelogramButton" onclick="changeTab(this, 'Parallelogram');">
   Rööpkülik
 </button>
-<button class="tabbutton" onclick="changeTab(this, 'Circle');">
+<button class="tabbutton" id="CircleButton" onclick="changeTab(this, 'Circle');">
   Ring
 </button>
 <div class="tabcontent" id="Triangle">
