Paiguta kolmnurga andmesisestusväljad ja nende selgitav tekst tabelisse, et joondada väljad ja tekitada nende ümber ruumi.

--- a/index.html
+++ b/index.html
@@ -8,21 +8,32 @@
   Ring
 </button>
 <div class="tabcontent" id="Triangle">
-  <label for="TriangleSide1">
-    Külg 1
-  </label>
-  <input id="TriangleSide1">
-  </br>
-  <label for="TriangleSide2">
-    Külg 2
-  </label>
-  <input id="TriangleSide2">
-  </br>
-  <label for="TriangleSide3">
-    Külg 3
-  </label>
-  <input id="TriangleSide3">
-  </br>
+  <table>
+    <tr>
+      <td>
+        Külg 1
+      </td>
+      <td>
+        <input id="TriangleSide1">
+      </td>
+    </tr>
+    <tr>
+      <td>
+        Külg 2
+      </td>
+      <td>
+        <input id="TriangleSide2">
+      </td>
+    </tr>
+    <tr>
+      <td>
+        Külg 3
+      </td>
+      <td>
+        <input id="TriangleSide3">
+      </td>
+    </tr>
+  </table>
   <button onclick="triangle();">
     Arvuta
   </button>
