Paiguta ka teiste kujundite andmesisestusväljad tabelitesse.

--- a/index.html
+++ b/index.html
@@ -39,31 +39,47 @@
   </button>
 </div>
 <div class="tabcontent" hidden id="Parallelogram">
-  <label for="ParallelogramAngle">
-    Nurk (rad)
-  </label>
-  <input id="ParallelogramAngle">
-  </br>
-  <label for="ParallelogramSide1">
-    Külg 1
-  </label>
-  <input id="ParallelogramSide1">
-  </br>
-  <label for="ParallelogramSide2">
-    Külg 2
-  </label>
-  <input id="ParallelogramSide2">
-  </br>
+  <table>
+    <tr>
+      <td>
+        Nurk (rad)
+      </td>
+      <td>
+        <input id="ParallelogramAngle">
+      </td>
+    </tr>
+    <tr>
+      <td>
+        Külg 1
+      </td>
+      <td>
+        <input id="ParallelogramSide1">
+      </td>
+    </tr>
+    <tr>
+      <td>
+        Külg 2
+      </td>
+      <td>
+        <input id="ParallelogramSide2">
+      </td>
+    </tr>
+  </table>
   <button onclick="parallelogram();">
     Arvuta
   </button>
 </div>
 <div class="tabcontent" hidden id="Circle">
-  <label for="CircleRadius">
-    Raadius
-  </label>
-  <input id="CircleRadius">
-  </br>
+  <table>
+    <tr>
+      <td>
+        Raadius
+      </td>
+      <td>
+        <input id="CircleRadius">
+      </td>
+    </tr>
+  </table>
   <button onclick="circle();">
     Arvuta
   </button>
