Tee selgitava teksti tulp sama laiaks iga kujundi korral, et teine tulp ei hüppaks ringi.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="tabcontent" id="Triangle">
   <table>
     <tr>
-      <td>
+      <td class="fieldname">
         Külg 1
       </td>
       <td>
@@ -18,7 +18,7 @@
       </td>
     </tr>
     <tr>
-      <td>
+      <td class="fieldname">
         Külg 2
       </td>
       <td>
@@ -26,7 +26,7 @@
       </td>
     </tr>
     <tr>
-      <td>
+      <td class="fieldname">
         Külg 3
       </td>
       <td>
@@ -41,7 +41,7 @@
 <div class="tabcontent" hidden id="Parallelogram">
   <table>
     <tr>
-      <td>
+      <td class="fieldname">
         Nurk (rad)
       </td>
       <td>
@@ -49,7 +49,7 @@
       </td>
     </tr>
     <tr>
-      <td>
+      <td class="fieldname">
         Külg 1
       </td>
       <td>
@@ -57,7 +57,7 @@
       </td>
     </tr>
     <tr>
-      <td>
+      <td class="fieldname">
         Külg 2
       </td>
       <td>
@@ -72,7 +72,7 @@
 <div class="tabcontent" hidden id="Circle">
   <table>
     <tr>
-      <td>
+      <td class="fieldname">
         Raadius
       </td>
       <td>
