Tee andemsisestusväljade tabel sama kõrgeks iga kujundi korral, et arvutamise nupp ei hüppaks ringi.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   Ring
 </button>
 <div class="tabcontent" id="Triangle">
-  <table>
+  <table class="inputtable">
     <tr>
       <td class="fieldname">
         Külg 1
@@ -39,7 +39,7 @@
   </button>
 </div>
 <div class="tabcontent" hidden id="Parallelogram">
-  <table>
+  <table class="inputtable">
     <tr>
       <td class="fieldname">
         Nurk (rad)
@@ -70,7 +70,7 @@
   </button>
 </div>
 <div class="tabcontent" hidden id="Circle">
-  <table>
+  <table class="inputtable">
     <tr>
       <td class="fieldname">
         Raadius
