Kujunda arvutamise nuppu endale meelepärasel viisil.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </td>
     </tr>
   </table>
-  <button onclick="triangle();">
+  <button class="compute" onclick="triangle();">
     Arvuta
   </button>
 </div>
@@ -65,7 +65,7 @@
       </td>
     </tr>
   </table>
-  <button onclick="parallelogram();">
+  <button class="compute" onclick="parallelogram();">
     Arvuta
   </button>
 </div>
@@ -80,7 +80,7 @@
       </td>
     </tr>
   </table>
-  <button onclick="circle();">
+  <button class="compute" onclick="circle();">
     Arvuta
   </button>
 </div>
