Paiguta arvutuste tulemused tabelisse.

--- a/index.html
+++ b/index.html
@@ -84,12 +84,26 @@
     Arvuta
   </button>
 </div>
-Ümbermõõt:
-<div id="Perimeter">
-</div>
-Pindala:
-<div id="Area">
-</div>
+<table>
+  <tr>
+    <td>
+      Ümbermõõt:
+    </td>
+    <td>
+      <div id="Perimeter">
+      </div>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Pindala:
+    </td>
+    <td>
+      <div id="Area">
+      </div>
+    </td>
+  </tr>
+</table>
 <link href="style.css" rel="stylesheet">
 <script src="script.js">
 </script>
